# Clive

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Config.h.in  main.cpp
src/Application/: AppKernel.cpp  AppKernel.hpp  GameApp.cpp  GameApp.hpp
src/Application/State/: GameState.cpp  GameState.hpp
src/Core/: Time.cpp  Time.hpp
src/Core/Config/: ConfigManager.cpp  ConfigManager.hpp  ConfigManagerInterface.hpp
src/Core/Format/: TimeFormat.cpp  TimeFormat.hpp  TimeFormatConfig.hpp  TimeFormatInterface.hpp
src/Core/Kernel/: Kernel.cpp  Kernel.hpp  KernelInterface.hpp
src/Core/Logger/: ConsoleLogHandler.cpp  ConsoleLogHandler.hpp  FileLogHandler.cpp  FileLogHandler.hpp  FileLogHandlerConfig.hpp  LogHandlerInterface.hpp  LogLevel.hpp  Logger.cpp  Logger.hpp  LoggerInterface.hpp
src/Game/Loop/: AdvancedLoop.cpp  AdvancedLoop.hpp  ExpertLoop.cpp  ExpertLoop.hpp  FramerateLimitedLoop.cpp  FramerateLimitedLoop.hpp  Loop.cpp  Loop.hpp  LoopInterface.hpp
src/Game/State/: StateInterface.hpp  StateManager.cpp  StateManager.hpp  StateManagerInterface.hpp
